# gedpaths

./: .auto-claude-security.json  .auto-claude-status  .claude_settings.json  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  analyze_edit_path_graphs.cpp  analyze_mappings.cpp  convert_precomputed.cpp  create_edit_mappings.cpp  create_edit_paths.cpp  experiment.sh  experiment_extended.sh  mapping_statistics.cpp  test.sh  test_linux.cpp
.auto-claude/specs/001-analyze-the-project-and-suggest-optimizations/analysis/: visualization-analysis.md
analysis/: dependency-linking-and-pgo-analysis.md
docs/: EXAMPLES.md  INSTALLATION.md  METHODS.md  pipeline.dot
python_src/: data_loader.py  install.sh  precomputed_targets.py  requirements.txt  synthetic_data_generator.py  test.py  wl_analysis.py
python_src/converter/: GEDPathsInMemory.py  bgf_to_pt.py  bgf_to_torch_geometric.py  test_load_pt.py
python_src/visualization/: plot_edit_path.py  plot_edit_path_stats.py  visualization_functions.py
specs/: OPTIMIZATION_REPORT.md  next_steps.md
src/: analyze_edit_path_graphs.h  analyze_mappings.h  convert.h  create_edit_mappings.h  create_edit_paths.h
